# rust-jwt

./: Cargo.toml  README.md
.github/workflows/: rust.yml
actix-auth/: Cargo.toml
actix-auth/src/: main.rs  model.rs
actix-auth/src/auth/: check.rs
actix-auth/src/domain/: permission.rs  user.rs
actix-auth/src/models/: user.rs
actix-auth/src/routes/: config.rs  health_route.rs  mod.rs  token.rs  user.rs
jwt-lib/: Cargo.toml
jwt-lib/src/: lib.rs
