[package]
name = "actix-auth"
version = "0.1.0"
authors = ["Joel Alvarez MExia <jeresoft@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.5.1"
serde_json = "1.0.116"
jwt-lib = { path = "../jwt-lib" }
dotenv = "0.15.0"
mongodb = "2.8.2"
serde = { version = "1.0.200", features = ["derive"] }
