[package]
name = "jwt-lib"
version = "0.1.0"
authors = ["Joel Alvarez MExia <jeresoft@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.38"
dotenv = "0.15.0"
jsonwebtoken = "9.3.0"
serde = { version = "1.0.201", features = ["derive"] }
